--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -14,5 +14,26 @@
     "navigationBarBackgroundColor": "#F6F6F6",
     "navigationBarTitleText": "上传图片展示",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar":{
+    "backgroundColor":"#F6F6F6",
+    "list" : [
+      {
+        "pagePath":"pages/index/index",
+        "iconPath": "images/home.png",
+      "selectedIconPath": "images/home_sel.png"
+      },
+      {
+        "pagePath": "pages/deployFunctions/deployFunctions",
+        "iconPath": "images/about.png",
+        "selectedIconPath": "images/about_sel.png"
+      }
+      ,
+      {
+        "pagePath": "pages/databaseGuide/databaseGuide",
+        "iconPath": "images/contact.png",
+        "selectedIconPath": "images/contact_sel.png"
+      }
+    ]
   }
 }
